# IPC

./: .gitignore  ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  CMakeLists.txt  IPC_SLN.sln  README.md  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  main.cpp  my_program.vcxproj  my_program.vcxproj.filters
include/: sqlite3.h
lib/: bz2.lib  libcrypto.lib  libcurl.lib  libexpat.lib  libffi.lib  libssl.lib  lzma.lib  pkgconf.lib  python3.lib  python310.lib  sqlite3.lib  zlib.lib
lib/pkgconfig/: expat.pc  python-3.10-embed.pc  python-3.10.pc  sqlite3.pc
